Add lazy load to all images

--- a/bomb-it.html
+++ b/bomb-it.html
@@ -58,52 +58,7 @@
 					<p>Free exotic birds from their captors using ricocheting bombs</p>
 				</header>
 				<div class="row gtr-150">
-					<div class="col-4 col-12-medium">
-
-						<!-- Sidebar -->
-						<section id="sidebar">
-							<section>
-								<footer>
-									<ul class="game-info">
-										<li>
-											<p>Hyper-casual</p>
-										</li>
-										<li>
-											<p>Puzzle</p>
-										</li>
-										<li>
-											<p>Physics</p>
-										</li>
-									</ul>
-								</footer>
-								<hr />
-								<h3>Synopsis</h3>
-								<p>Bomb It is an hyper-casual game in which you set captive birds free with
-									ricocheting bombs and projectiles.
-								</p>
-								<!-- DOWNLOAD PAGE -->
-								<!-- <footer>
-									<ul class="actions">
-										<li><a href="https://play.google.com/store/apps/details?id=com.funpunchgames.bombit&hl=en&gl=US" 
-											target="_blank" class="button">Download Link</a></li>
-									</ul>
-								</footer> -->
-							</section>
-							<hr />
-
-								<!-- Trailer -->
-								<section>
-									<h3>Videos</h3>
-									<div class="video embed fit">
-										<video src="images/projects/bombit/gameplay.mp4" autoplay loop controls></video>
-										<!--<iframe src="images/projects/facemasher/gameplay1.mp4"
-											width="560" height="315" allowfullscreen frameborder="0"></iframe>-->
-									</div>
-								</section>
-								<hr />
-							</section>
-
-					</div>
+					
 					<div class="col-8 col-12-medium medium">
 
 						<!-- Content -->
@@ -150,70 +105,116 @@
 								<article class="from-left">
 									<a href="images/projects/bombit/1.gif" class="image2"><img
 											src="images/projects/bombit/1.gif"
-											alt="" /></a>
+											alt="" loading="lazy"/></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/bombit/2.gif" class="image2"><img
 											src="images/projects/bombit/2.gif"
-											alt="" /></a>
+											alt="" loading="lazy"/></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/bombit/Birds - Caged.gif" class="image2"><img
 											src="images/projects/bombit/Birds - Caged.gif"
-											alt="" /></a>
+											alt="" loading="lazy"/></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/bombit/Birds.gif" class="image2"><img
 											src="images/projects/bombit/Birds.gif"
-											alt="" /></a>
+											alt="" loading="lazy"/></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/bombit/Birds 2.gif" class="image2"><img
 											src="images/projects/bombit/Birds 2.gif"
-											alt="" /></a>
+											alt="" loading="lazy"/></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/bombit/Color Concepts.png" class="image2"><img
 											src="images/projects/bombit/Color Concepts.png"
-											alt="" /></a>
+											alt="" loading="lazy"/></a>
 								</article>
-								<article class="from-left">
+								<!-- <article class="from-left">
 									<a href="images/projects/bombit/1.png" class="image2"><img
 											src="images/projects/bombit/1.png"
-											alt="" /></a>
+											alt="" loading="lazy"/></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/bombit/2.png" class="image2"><img
 											src="images/projects/bombit/2.png"
-											alt="" /></a>
+											alt="" loading="lazy"/></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/bombit/3.png" class="image2"><img
 											src="images/projects/bombit/3.png"
-											alt="" /></a>
+											alt="" loading="lazy"/></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/bombit/4.png" class="image2"><img
 											src="images/projects/bombit/4.png"
-											alt="" /></a>
+											alt="" loading="lazy"/></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/bombit/5.png" class="image2"><img
 											src="images/projects/bombit/5.png"
-											alt="" /></a>
+											alt="" loading="lazy"/></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/bombit/6.png" class="image2"><img
 											src="images/projects/bombit/6.png"
-											alt="" /></a>
+											alt="" loading="lazy"/></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/bombit/7.png" class="image2"><img
 											src="images/projects/bombit/7.png"
-											alt="" /></a>
-								</article>
+											alt="" loading="lazy"/></a>
+								</article> -->
 							</div>
 						</section>
+
+					</div>
+					<div class="col-4 col-12-medium">
+
+						<!-- Sidebar -->
+						<section id="sidebar">
+							<section>
+								<footer>
+									<ul class="game-info">
+										<li>
+											<p>Hyper-casual</p>
+										</li>
+										<li>
+											<p>Puzzle</p>
+										</li>
+										<li>
+											<p>Physics</p>
+										</li>
+									</ul>
+								</footer>
+								<hr />
+								<h3>Synopsis</h3>
+								<p>Bomb It is an hyper-casual game in which you set captive birds free with
+									ricocheting bombs and projectiles.
+								</p>
+								<!-- DOWNLOAD PAGE -->
+								<!-- <footer>
+									<ul class="actions">
+										<li><a href="https://play.google.com/store/apps/details?id=com.funpunchgames.bombit&hl=en&gl=US" 
+											target="_blank" class="button">Download Link</a></li>
+									</ul>
+								</footer> -->
+							</section>
+							<hr />
+
+								<!-- Trailer -->
+								<section>
+									<h3>Videos</h3>
+									<div class="video embed fit">
+										<video src="images/projects/bombit/gameplay.mp4" loop controls></video>
+										<!--<iframe src="images/projects/facemasher/gameplay1.mp4"
+											width="560" height="315" allowfullscreen frameborder="0"></iframe>-->
+									</div>
+								</section>
+								<hr />
+							</section>
 
 					</div>
 				</div>
