--- a/crypto-bird.html
+++ b/crypto-bird.html
@@ -58,6 +58,76 @@
 					<p>Jetpack Joyride meets Flappy Bird in this endless runner </p>
 				</header>
 				<div class="row gtr-150">
+					
+					<div class="col-8 col-12-medium medium">
+
+						<!-- Content -->
+						<section id="content">
+							<span class="image fit"><img src="images/projects/cryptobird/banner.png" alt=""/></span>
+							<h3>About The Project</h3>
+							<p> Crypto Bird is a client project developed for <a href="https://www.exeedme.com/"
+									target="_blank">Exeedme</a>
+								and it is their first Play2Earn blockchain game. It combines in-game characters as
+								NFTs with a rewards pool to incentivize a vibrant gaming community and encompass the
+								true play to earn mechanics.
+							<h3>My Role In The Project</h3>
+							<ul class="roles">
+								<li>Fast Prototyping
+									<p> I was responsible for the fast prototyping of the initial concept behind this
+										game.</p>
+								</li>
+								<li>Gameplay Programming
+									<p> I implemented gameplay systems, mechanics and other specific tools that helped
+										the development of the project.</p>
+								</li>
+								<li>Game Design
+									<p> I took part in the game design process and some balancing.</p>
+								</li>
+							</ul>
+							<!-- Gallery  -->
+							<h3>Gallery</h3>
+							<div class="gallery2">
+								<article class="from-left">
+									<a href="images/projects/cryptobird/gamemodes.gif" class="image2"><img
+											src="images/projects/cryptobird/gameplay.gif" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/cryptobird/gamemodes.gif" class="image2"><img
+											src="images/projects/cryptobird/gamemodes.gif" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/cryptobird/bird_variation.gif" class="image2"><img
+											src="images/projects/cryptobird/bird_variation.gif" alt="" loading="lazy" /></a>
+								</article>
+
+								<article class="from-left">
+									<a href="images/projects/cryptobird/powerups-and-curses.gif" class="image2"><img
+											src="images/projects/cryptobird/powerups-and-curses.gif" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="iimages/projects/cryptobird/birds.gif" class="image2"><img
+											src="images/projects/cryptobird/birds.gif" alt="" loading="lazy" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/cryptobird/obstacles.gif" class="image2"><img
+											src="images/projects/cryptobird/obstacles.gif" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/cryptobird/minting.gif" class="image2"><img
+											src="images/projects/cryptobird/minting.gif" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/cryptobird/minting.gif" class="image2"><img
+											src="images/projects/cryptobird/pickables.jfif" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/cryptobird/ss.jfif" class="image2"><img
+											src="images/projects/cryptobird/ss.jfif" alt="" loading="lazy" /></a>
+								</article>
+							</div>
+						</section>
+
+					</div>
 					<div class="col-4 col-12-medium">
 
 						<!-- Sidebar -->
@@ -95,7 +165,7 @@
 								<section>
 									<h3>Trailer</h3>
 									<div class="video embed fit">
-										<video src="images/projects/cryptobird/trailer_cut.mp4" autoplay loop controls
+										<video src="images/projects/cryptobird/trailer_cut.mp4" loop controls
 											muted></video>
 										<!--<iframe src="images/projects/facemasher/gameplay1.mp4"
 											width="560" height="315" allowfullscreen frameborder="0"></iframe>-->
@@ -103,75 +173,6 @@
 								</section>
 								<hr />
 							</section>
-
-					</div>
-					<div class="col-8 col-12-medium medium">
-
-						<!-- Content -->
-						<section id="content">
-							<span class="image fit"><img src="images/projects/cryptobird/banner.png" alt="" /></span>
-							<h3>About The Project</h3>
-							<p> Crypto Bird is a client project developed for <a href="https://www.exeedme.com/"
-									target="_blank">Exeedme</a>
-								and it is their first Play2Earn blockchain game. It combines in-game characters as
-								NFTs with a rewards pool to incentivize a vibrant gaming community and encompass the
-								true play to earn mechanics.
-							<h3>My Role In The Project</h3>
-							<ul class="roles">
-								<li>Fast Prototyping
-									<p> I was responsible for the fast prototyping of the initial concept behind this
-										game.</p>
-								</li>
-								<li>Gameplay Programming
-									<p> I implemented gameplay systems, mechanics and other specific tools that helped
-										the development of the project.</p>
-								</li>
-								<li>Game Design
-									<p> I took part in the game design process and some balancing.</p>
-								</li>
-							</ul>
-							<!-- Gallery  -->
-							<h3>Gallery</h3>
-							<div class="gallery2">
-								<article class="from-left">
-									<a href="images/projects/cryptobird/gamemodes.gif" class="image2"><img
-											src="images/projects/cryptobird/gameplay.gif" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/cryptobird/gamemodes.gif" class="image2"><img
-											src="images/projects/cryptobird/gamemodes.gif" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/cryptobird/bird_variation.gif" class="image2"><img
-											src="images/projects/cryptobird/bird_variation.gif" alt="" /></a>
-								</article>
-
-								<article class="from-left">
-									<a href="images/projects/cryptobird/powerups-and-curses.gif" class="image2"><img
-											src="images/projects/cryptobird/powerups-and-curses.gif" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="iimages/projects/cryptobird/birds.gif" class="image2"><img
-											src="images/projects/cryptobird/birds.gif" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/cryptobird/obstacles.gif" class="image2"><img
-											src="images/projects/cryptobird/obstacles.gif" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/cryptobird/minting.gif" class="image2"><img
-											src="images/projects/cryptobird/minting.gif" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/cryptobird/minting.gif" class="image2"><img
-											src="images/projects/cryptobird/pickables.jfif" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/cryptobird/ss.jfif" class="image2"><img
-											src="images/projects/cryptobird/ss.jfif" alt="" /></a>
-								</article>
-							</div>
-						</section>
 
 					</div>
 				</div>
