--- a/face-masher.html
+++ b/face-masher.html
@@ -58,6 +58,97 @@
 					<p>Casual goofy game where you mash faces as their parts quickly fall down</p>
 				</header>
 				<div class="row gtr-150">
+					
+					<div class="col-8 col-12-medium medium">
+
+						<!-- Content -->
+						<section id="content">
+							<span class="image fit"><img src="images/projects/facemasher/banner1.png" alt=""/></span>
+							<h3>About The Project</h3>
+							<p> The initial idea behind this project was to create a very simple but interesting
+								gameplay that
+								felt very casual and if we were happy with it, reach out to publishers.
+								<br><br>The first prototype had a mechanic pretty similar to the one in Face
+								Masher (except it was more of a building game) and it got the attention of a very
+								successful
+								publisher. They gave us the green light to further develop the game so we could have a
+								testable prototype ready for marketing.
+								<br><br> The marketing tests came back with interesting results, but not enough to justify 
+								further developing the project.
+							<h3>My Role In The Project</h3>
+							<ul class="roles">
+								<li>Fast Prototyping
+									<p> I was responsible for the fast prototyping of the initial concept behind this
+										game.</p>
+								</li>
+								<li>Gameplay Programming
+									<p> I implemented all the gameplay and any other inexistent system that was
+										necessary for
+										this project.</p>
+								</li>
+								<li>Game Design
+									<p> Alongside my team, I was part of all the game design process behind this game.
+									</p>
+								</li>
+								<li>Shaders
+									<p>I implemented custom shaders for gameplay visuals (e.g. the background skybox).</p>
+								</li>
+							</ul>
+							<!-- Gallery  -->
+							<h3>Gallery</h3>
+							<div class="gallery2">
+								<article class="from-left">
+									<a href="images/projects/facemasher/gameplay1.gif" class="image2"><img
+											src="images/projects/facemasher/gameplay1.gif" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/facemasher/gameplay2.gif" class="image2"><img
+											src="images/projects/facemasher/gameplay2.gif" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/facemasher/gameplay3.gif" class="image2"><img
+											src="images/projects/facemasher/gameplay3.gif" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/facemasher/gameplay4.gif" class="image2"><img
+											src="images/projects/facemasher/gameplay4.gif" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/facemasher/1.png" class="image2"><img
+											src="images/projects/facemasher/1.png" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/facemasher/2.png" class="image2"><img
+											src="images/projects/facemasher/2.png" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/facemasher/3.png" class="image2"><img
+											src="images/projects/facemasher/3.png" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/facemasher/4.png" class="image2"><img
+											src="images/projects/facemasher/4.png" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/facemasher/5.png" class="image2"><img
+											src="images/projects/facemasher/5.png" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/facemasher/6.png" class="image2"><img
+											src="images/projects/facemasher/6.png" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/facemasher/7.png" class="image2"><img
+											src="images/projects/facemasher/7.png" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/facemasher/8.png" class="image2"><img
+											src="images/projects/facemasher/8.png" alt="" loading="lazy" /></a>
+								</article>
+							</div>
+						</section>
+
+					</div>
 					<div class="col-4 col-12-medium">
 
 						<!-- Sidebar -->
@@ -95,103 +186,12 @@
 							<section>
 								<h3>Videos</h3>
 								<div class="video embed fit">
-									<video src="images/projects/facemasher/gameplay.mp4" autoplay loop controls></video>
+									<video src="images/projects/facemasher/gameplay.mp4" loop controls></video>
 									<!--<iframe src="images/projects/facemasher/gameplay1.mp4"
 											width="560" height="315" allowfullscreen frameborder="0"></iframe>-->
 								</div>
 							</section>
 							<hr />
-						</section>
-
-					</div>
-					<div class="col-8 col-12-medium medium">
-
-						<!-- Content -->
-						<section id="content">
-							<span class="image fit"><img src="images/projects/facemasher/banner1.png" alt="" /></span>
-							<h3>About The Project</h3>
-							<p> The initial idea behind this project was to create a very simple but interesting
-								gameplay that
-								felt very casual and if we were happy with it, reach out to publishers.
-								<br><br>The first prototype had a mechanic pretty similar to the one in Face
-								Masher (except it was more of a building game) and it got the attention of a very
-								successful
-								publisher. They gave us the green light to further develop the game so we could have a
-								testable prototype ready for marketing.
-								<br><br> The marketing tests came back with interesting results, but they weren't good
-								enough to
-								dedicate more time and resources to this project, so we put it aside.
-							<h3>My Role In The Project</h3>
-							<ul class="roles">
-								<li>Fast Prototyping
-									<p> I was responsible for the fast prototyping of the initial concept behind this
-										game.</p>
-								</li>
-								<li>Gameplay Programming
-									<p> I implemented all the gameplay and any other inexistent system that was
-										necessary for
-										this project.</p>
-								</li>
-								<li>Game Design
-									<p> Alongside my team, I was part of all the game design process behind this game.
-									</p>
-								</li>
-								<li>Shaders
-									<p>I implemented custom shaders for gameplay visuals (e.g. the background skybox).</p>
-								</li>
-							</ul>
-							<!-- Gallery  -->
-							<h3>Gallery</h3>
-							<div class="gallery2">
-								<article class="from-left">
-									<a href="images/projects/facemasher/gameplay1.gif" class="image2"><img
-											src="images/projects/facemasher/gameplay1.gif" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/facemasher/gameplay2.gif" class="image2"><img
-											src="images/projects/facemasher/gameplay2.gif" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/facemasher/gameplay3.gif" class="image2"><img
-											src="images/projects/facemasher/gameplay3.gif" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/facemasher/gameplay4.gif" class="image2"><img
-											src="images/projects/facemasher/gameplay4.gif" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/facemasher/1.png" class="image2"><img
-											src="images/projects/facemasher/1.png" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/facemasher/2.png" class="image2"><img
-											src="images/projects/facemasher/2.png" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/facemasher/3.png" class="image2"><img
-											src="images/projects/facemasher/3.png" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/facemasher/4.png" class="image2"><img
-											src="images/projects/facemasher/4.png" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/facemasher/5.png" class="image2"><img
-											src="images/projects/facemasher/5.png" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/facemasher/6.png" class="image2"><img
-											src="images/projects/facemasher/6.png" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/facemasher/7.png" class="image2"><img
-											src="images/projects/facemasher/7.png" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/facemasher/8.png" class="image2"><img
-											src="images/projects/facemasher/8.png" alt="" /></a>
-								</article>
-							</div>
 						</section>
 
 					</div>
