--- a/find-your-everything.html
+++ b/find-your-everything.html
@@ -57,6 +57,66 @@
 					<p>A short experience and abstract representation of real life dating</p>
 				</header>
 				<div class="row gtr-150">
+					
+					<div class="col-8 col-12-medium medium">
+
+						<!-- Content -->
+						<section id="content">
+							<span class="image fit"><img src="images/projects/findyoureverything/banner.jpg"
+									alt=""/></span>
+							<h3>About The Project</h3>
+							<p>FYE was developed for the Ludum Dare 45 game jam that had a duration of 3 days and whose
+								theme was "Start with nothing".
+								It is an experimental game where we try to create a puzzling analogy to what finding the
+								love of your life might be like in real life.
+								<br><br>
+								The final result wasn't as polished as we intended to, due to lack of time, but we got
+								plenty of good feedback.
+								<br><br>
+								We didn't touch the game after the jam finished, but we will certainly give it some
+								final touches in our spare time.
+							<h3>My Role In The Project</h3>
+							<ul class="roles">
+								<li>Programming
+									<p> I was one of the programmers, working mostly on gameplay and the procedural
+										animation.</p>
+								</li>
+
+								<li>Game Design
+									<p> I've worked on game design with my team as well as the game concept itself.</p>
+								</li>
+							</ul>
+							<!-- Gallery  -->
+							<h3>Gallery</h3>
+							<div class="gallery2">
+								<article class="from-left">
+									<a href="images/projects/findyoureverything/SS1.JPG" class="image2 fit"><img
+											src="images/projects/findyoureverything/SS1.JPG" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/findyoureverything/SS3.JPG" class="image2 fit"><img
+											src="images/projects/findyoureverything/SS3.JPG" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/findyoureverything/SS4.JPG" class="image2 fit"><img
+											src="images/projects/findyoureverything/SS4.JPG" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/findyoureverything/SS5.JPG" class="image2 fit"><img
+											src="images/projects/findyoureverything/SS5.JPG" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/findyoureverything/SS6.JPG" class="image2 fit"><img
+											src="images/projects/findyoureverything/SS6.JPG" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/findyoureverything/feedback1.JPG" class="image2 fit"><img
+											src="images/projects/findyoureverything/feedback1.JPG" alt="" loading="lazy" /></a>
+								</article>
+							</div>
+						</section>
+
+					</div>
 					<div class="col-4 col-12-medium">
 
 						<!-- Sidebar -->
@@ -95,65 +155,6 @@
 								</footer>
 							</section>
 							<hr />
-						</section>
-
-					</div>
-					<div class="col-8 col-12-medium medium">
-
-						<!-- Content -->
-						<section id="content">
-							<span class="image fit"><img src="images/projects/findyoureverything/banner.jpg"
-									alt="" /></span>
-							<h3>About The Project</h3>
-							<p>FYE was developed for the Ludum Dare 45 game jam that had a duration of 3 days and whose
-								theme was "Start with nothing".
-								It is an experimental game where we try to create a puzzling analogy to what finding the
-								love of your life might be like in real life.
-								<br><br>
-								The final result wasn't as polished as we intended to, due to lack of time, but we got
-								plenty of good feedback.
-								<br><br>
-								We didn't touch the game after the jam finished, but we will certainly give it some
-								final touches in our spare time.
-							<h3>My Role In The Project</h3>
-							<ul class="roles">
-								<li>Programming
-									<p> I was one of the programmers, working mostly on gameplay and the procedural
-										animation.</p>
-								</li>
-
-								<li>Game Design
-									<p> I've worked on game design with my team as well as the game concept itself.</p>
-								</li>
-							</ul>
-							<!-- Gallery  -->
-							<h3>Gallery</h3>
-							<div class="gallery2">
-								<article class="from-left">
-									<a href="images/projects/findyoureverything/SS1.JPG" class="image2 fit"><img
-											src="images/projects/findyoureverything/SS1.JPG" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/findyoureverything/SS3.JPG" class="image2 fit"><img
-											src="images/projects/findyoureverything/SS3.JPG" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/findyoureverything/SS4.JPG" class="image2 fit"><img
-											src="images/projects/findyoureverything/SS4.JPG" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/findyoureverything/SS5.JPG" class="image2 fit"><img
-											src="images/projects/findyoureverything/SS5.JPG" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/findyoureverything/SS6.JPG" class="image2 fit"><img
-											src="images/projects/findyoureverything/SS6.JPG" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/findyoureverything/feedback1.JPG" class="image2 fit"><img
-											src="images/projects/findyoureverything/feedback1.JPG" alt="" /></a>
-								</article>
-							</div>
 						</section>
 
 					</div>
