--- a/happy-new-rocket.html
+++ b/happy-new-rocket.html
@@ -57,6 +57,64 @@
 					<p>A frantic multiplayer action game where you battle for the best fireworks show until midnight</p>
 				</header>
 				<div class="row gtr-150">
+					
+					<div class="col-8 col-12-medium medium">
+
+						<!-- Content -->
+						<section id="content">
+							<span class="image fit"><img src="images/projects/happynewrocket/Header.png" alt="" /></span>
+							<h3>About The Project</h3>
+							<p>On the final week of 2020, my college teammates and I decided to 
+								participate in the Weekly Game Jam 181 whose theme was "New Year's Countdown".
+								<br><br> The four of us hadn't been involved in game jams in a long time but we always 
+								like to challenge ourselves so we decided to make our first 3D jam and, even more ambitiously, 
+								a multiplayer online game!
+								<br><br> At the time, I was working at Nerd Monkeys for a few months so my programming skills 
+								had already improved substantially compared to when I was in college. Something that this 
+								project definitely reflected.
+								<br><br> It's worth stating that this game was <b>developed in only 6 days</b>, which is quite an 
+								accomplishment from our perspective!
+							<h3>My Role In The Project</h3>
+							<ul class="roles">
+								<li>Gameplay Programming
+									<p> I was the gameplay programmer, implementing everything from scratch.</p>
+								</li>
+								<li>Online Programming
+									<p> I got the chance to work on part of the multiplayer implementation 
+										after I was finished with the gameplay programming.
+										<br>The online implementation was done using the Photon and SmoothSync assets.</p>
+								</li>
+								<li>Game Design
+									<p> I've worked on the game's concept and game design.</p>
+								</li>
+							</ul>
+							<!-- Gallery  -->
+							<h3>Gallery</h3>
+							<div class="gallery2">
+								<article class="from-left">
+									<a href="images/projects/happynewrocket/Screenshot 1.png" class="image2 fit"><img
+											src="images/projects/happynewrocket/Screenshot 1.png" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/happynewrocket/Screenshot 2.png" class="image2 fit"><img
+											src="images/projects/happynewrocket/Screenshot 2.png" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/happynewrocket/Screenshot 3.png" class="image2 fit"><img
+											src="images/projects/happynewrocket/Screenshot 3.png" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/happynewrocket/Screenshot 4.png" class="image2 fit"><img
+											src="images/projects/happynewrocket/Screenshot 4.png" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/happynewrocket/Screenshot 5.png" class="image2 fit"><img
+											src="images/projects/happynewrocket/Screenshot 5.png" alt="" loading="lazy" /></a>
+								</article>
+							</div>
+						</section>
+
+					</div>
 					<div class="col-4 col-12-medium">
 
 						<!-- Sidebar -->
@@ -93,63 +151,6 @@
 								</div>
 							</section>
 							<hr />
-						</section>
-
-					</div>
-					<div class="col-8 col-12-medium medium">
-
-						<!-- Content -->
-						<section id="content">
-							<span class="image fit"><img src="images/projects/happynewrocket/Header.png" alt="" /></span>
-							<h3>About The Project</h3>
-							<p>On the final week of 2020, my college teammates and I decided to 
-								participate in the Weekly Game Jam 181 whose theme was "New Year's Countdown".
-								<br><br> The four of us hadn't been involved in game jams in a long time but we always 
-								like to challenge ourselves so we decided to make our first 3D jam and, even more ambitiously, 
-								a multiplayer online game!
-								<br><br> At the time, I was working at Nerd Monkeys for a few months so my programming skills 
-								had already improved substantially compared to when I was in college. Something that this 
-								project definitely reflected.
-								<br><br> It's worth stating that this game was <b>developed in only 6 days</b>, which is quite an 
-								accomplishment from our perspective!
-							<h3>My Role In The Project</h3>
-							<ul class="roles">
-								<li>Gameplay Programming
-									<p> I was the gameplay programmer, implementing everything from scratch.</p>
-								</li>
-								<li>Online Programming
-									<p> Rui was the online programmer and did almost all of the online implementation. 
-										But I also got the chance to work on it after I was finished with the gameplay programming.
-										<br>The online implementation was done using the Photon and SmoothSync assets.</p>
-								</li>
-								<li>Game Design
-									<p> I've worked on the game's concept and game design.</p>
-								</li>
-							</ul>
-							<!-- Gallery  -->
-							<h3>Gallery</h3>
-							<div class="gallery2">
-								<article class="from-left">
-									<a href="images/projects/happynewrocket/Screenshot 1.png" class="image2 fit"><img
-											src="images/projects/happynewrocket/Screenshot 1.png" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/happynewrocket/Screenshot 2.png" class="image2 fit"><img
-											src="images/projects/happynewrocket/Screenshot 2.png" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/happynewrocket/Screenshot 3.png" class="image2 fit"><img
-											src="images/projects/happynewrocket/Screenshot 3.png" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/happynewrocket/Screenshot 4.png" class="image2 fit"><img
-											src="images/projects/happynewrocket/Screenshot 4.png" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/happynewrocket/Screenshot 5.png" class="image2 fit"><img
-											src="images/projects/happynewrocket/Screenshot 5.png" alt="" /></a>
-								</article>
-							</div>
 						</section>
 
 					</div>
