--- a/holy-hell.html
+++ b/holy-hell.html
@@ -57,60 +57,7 @@
 					<p>A chaotic and bloody vengeance that ends in God's death</p>
 				</header>
 				<div class="row gtr-150">
-					<div class="col-4 col-12-medium">
-
-						<!-- Sidebar -->
-						<section id="sidebar">
-							<section>
-								<footer>
-									<ul class="game-info">
-										<li><p>Single-player</p></li>
-										<li><p>Action-adventure</p></li>
-										<li><p>Top-down</p></li>
-										<li><p>3D</p></li>
-									</ul>
-								</footer>
-								<hr />
-								<h3>Synopsis</h3>
-								<p>Holy Hell is an action-adventure game set in Heaven, where you are searching for God
-									so you
-									can avenge your death. Fight angels, mythical beings, the Seven Virtues and God
-									himself as
-									you venture through all corners of Heaven.
-								</p>
-								<!-- ITCH.IO PAGE -->
-								<!--<footer>
-									<ul class="actions">
-										<li><a href="#" target="_blank" class="button">Download Link</a></li>
-									</ul>
-								</footer>-->
-							</section>
-							<hr />
-
-							<!-- Trailer -->
-							<section>
-								<h3>Trailer</h3>
-								<div class="video embed fit">
-									<!--<video src="images/projects/holyhell/trailer.mp4" poster="images/projects/holyhell/banner.png"></video>-->
-									<iframe src="https://www.youtube-nocookie.com/embed/CAZge36NEHo?rel=0" width="560" height="315" allowfullscreen frameborder="0"></iframe>
-								</div>
-							</section>
-							<hr />
-							<!-- Spec Sheet -->
-							<section>
-								<h3>Spec Sheet</h3>
-								<a href="https://drive.google.com/file/d/1W_QOXMSozPkX2T0er_ZO8uiWUJ9qYjCt/view?usp=sharing" target="_blank" class="image fit"><img src="images/projects/holyhell/spec sheet.png" alt="" /></a>
-							</section>
-							<hr />
-							<!-- Artbook -->
-							<section>
-								<h3>Artbook</h3>
-								<a href="https://drive.google.com/file/d/1DxEk58nolbF11e1v6KHLwBjIpuXDdTIS/view?usp=sharing" target="_blank" class="image fit"><img src="images/projects/holyhell/artbook.png" alt="" /></a>
-							</section>
-							<hr />
-						</section>
-
-					</div>
+					
 					<div class="col-8 col-12-medium medium">
 
 						<!-- Content -->
@@ -154,109 +101,163 @@
 							<div class="gallery2">
 								<article class="from-left">
 									<a href="images/projects/holyhell/banner.png" class="image2 fit"><img
-											src="images/projects/holyhell/banner.png" alt="" /></a>
+											src="images/projects/holyhell/banner.png" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/holyhell/banner 1.png" class="image2 fit"><img
-											src="images/projects/holyhell/banner 1.png" alt="" /></a>
+											src="images/projects/holyhell/banner 1.png" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-right">
 									<a href="images/projects/holyhell/screenshot (0).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (0).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (0).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-right">
 									<a href="images/projects/holyhell/screenshot (1).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (1).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (1).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/holyhell/screenshot (2).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (2).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (2).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-right">
 									<a href="images/projects/holyhell/screenshot (3).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (3).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (3).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/holyhell/screenshot (4).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (4).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (4).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-right">
 									<a href="images/projects/holyhell/screenshot (5).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (5).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (5).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-right">
 									<a href="images/projects/holyhell/screenshot (6).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (6).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (6).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/holyhell/screenshot (7).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (7).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (7).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-right">
 									<a href="images/projects/holyhell/screenshot (8).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (8).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (8).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/holyhell/screenshot (9).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (9).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (9).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-right">
 									<a href="images/projects/holyhell/screenshot (10).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (10).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (10).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-right">
 									<a href="images/projects/holyhell/screenshot (11).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (11).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (11).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/holyhell/screenshot (12).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (12).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (12).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-right">
 									<a href="images/projects/holyhell/screenshot (13).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (13).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (13).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/holyhell/screenshot (14).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (14).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (14).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-right">
 									<a href="images/projects/holyhell/screenshot (15).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (15).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (15).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-right">
 									<a href="images/projects/holyhell/screenshot (16).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (16).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (16).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/holyhell/screenshot (17).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (17).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (17).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-right">
 									<a href="images/projects/holyhell/screenshot (18).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (18).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (18).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/holyhell/screenshot (19).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (19).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (19).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-right">
 									<a href="images/projects/holyhell/screenshot (20).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (20).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (20).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-right">
 									<a href="images/projects/holyhell/screenshot (21).JPG" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (21).JPG" alt="" /></a>
+											src="images/projects/holyhell/screenshot (21).JPG" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-right">
 									<a href="images/projects/holyhell/screenshot (22).png" class="image2 fit"><img
-											src="images/projects/holyhell/screenshot (22).png" alt="" /></a>
+											src="images/projects/holyhell/screenshot (22).png" alt="" loading="lazy" /></a>
 								</article>
 								<article class="from-right">
 									<a href="images/projects/holyhell/enemies.png" class="image2 fit"><img
-											src="images/projects/holyhell/enemies.png" alt="" /></a>
+											src="images/projects/holyhell/enemies.png" alt="" loading="lazy" /></a>
 								</article>
 							</div>
+						</section>
+
+					</div>
+					<div class="col-4 col-12-medium">
+
+						<!-- Sidebar -->
+						<section id="sidebar">
+							<section>
+								<footer>
+									<ul class="game-info">
+										<li><p>Single-player</p></li>
+										<li><p>Action-adventure</p></li>
+										<li><p>Top-down</p></li>
+										<li><p>3D</p></li>
+									</ul>
+								</footer>
+								<hr />
+								<h3>Synopsis</h3>
+								<p>Holy Hell is an action-adventure game set in Heaven, where you are searching for God
+									so you
+									can avenge your death. Fight angels, mythical beings, the Seven Virtues and God
+									himself as
+									you venture through all corners of Heaven.
+								</p>
+								<!-- ITCH.IO PAGE -->
+								<!--<footer>
+									<ul class="actions">
+										<li><a href="#" target="_blank" class="button">Download Link</a></li>
+									</ul>
+								</footer>-->
+							</section>
+							<hr />
+
+							<!-- Trailer -->
+							<section>
+								<h3>Trailer</h3>
+								<div class="video embed fit">
+									<!--<video src="images/projects/holyhell/trailer.mp4" poster="images/projects/holyhell/banner.png"></video>-->
+									<iframe src="https://www.youtube-nocookie.com/embed/CAZge36NEHo?rel=0" width="560" height="315" allowfullscreen frameborder="0"></iframe>
+								</div>
+							</section>
+							<hr />
+							<!-- Spec Sheet -->
+							<section>
+								<h3>Spec Sheet</h3>
+								<a href="https://drive.google.com/file/d/1W_QOXMSozPkX2T0er_ZO8uiWUJ9qYjCt/view?usp=sharing" target="_blank" class="image fit"><img src="images/projects/holyhell/spec sheet.png" alt="" loading="lazy" /></a>
+							</section>
+							<hr />
+							<!-- Artbook -->
+							<section>
+								<h3>Artbook</h3>
+								<a href="https://drive.google.com/file/d/1DxEk58nolbF11e1v6KHLwBjIpuXDdTIS/view?usp=sharing" target="_blank" class="image fit"><img src="images/projects/holyhell/artbook.png" alt="" loading="lazy" /></a>
+							</section>
+							<hr />
 						</section>
 
 					</div>
