--- a/illuminants.html
+++ b/illuminants.html
@@ -57,6 +57,95 @@
 					<p>Simplistic and relaxing yet very challenging puzzle game</p>
 				</header>
 				<div class="row gtr-150">
+					
+					<div class="col-8 col-12-medium medium">
+
+						<!-- Content -->
+						<section id="content">
+							<a href="#" class="image fit"><img src="images/projects/illuminants/banner.png"
+									alt=""/></a>
+							<h3>About The Project</h3>
+							<p>Illuminants was the first game I ever developed in Unity. My team and I worked on it for about 4 months alongside ATMU (another project of ours) and we got lots of praise from colleagues and professors just by the concept itself. We were prized the Best Videogame award by our University, competing against projects from all of our course's years.
+								<br><br>We displayed the game in multiple events in Portugal and it was really well embraced by the community.
+								<br><br>Currently, we are re-developing Illuminants from scratch and intend to release it to mobile, with no determined schedule. </p>
+							<h3>My Role In The Project</h3>
+							<ul class="roles">
+								<li>Programming
+									<p> I was Illuminants lead programmer.</p>
+								</li>
+
+								<li>Game Design
+									<p> I've worked on both game design and level design side-by-side with my
+										colleagues.</p>
+								</li>
+								<li>UI Design
+									<p> I was responsible for implementing the 3D interactive menus and creating the gameplay UI.</p>
+								</li>
+								<li>Promo Art
+									<p> I was also responsible for creating promo-art and official documents for the
+										game like the Artbook.
+									</p>
+								</li>
+							</ul>
+							<!-- Gallery  -->
+							<h3>Gallery</h3>
+							<div class="gallery2">
+
+								<article class="from-left">
+									<a href="images/projects/illuminants/ss (1).PNG" class="image2 fit"><img
+											src="images/projects/illuminants/ss (1).PNG" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/illuminants/ss (3).PNG" class="image2 fit"><img
+											src="images/projects/illuminants/ss (3).PNG" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/illuminants/ss (4).PNG" class="image2 fit"><img
+											src="images/projects/illuminants/ss (4).PNG" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/illuminants/ss (5).PNG" class="image2 fit"><img
+											src="images/projects/illuminants/ss (5).PNG" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/illuminants/ss (6).PNG" class="image2 fit"><img
+											src="images/projects/illuminants/ss (6).PNG" alt="" loading="lazy" /></a>
+								</article>
+
+								<article class="from-left">
+									<a href="images/projects/illuminants/ss (2).PNG" class="image2 fit"><img
+											src="images/projects/illuminants/ss (2).PNG" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/illuminants/banner2.png" class="image2 fit"><img
+											src="images/projects/illuminants/banner2.png" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/illuminants/poster (3).png" class="image2 fit"><img
+											src="images/projects/illuminants/poster (3).png" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/illuminants/wallpaper 1.png" class="image2 fit"><img
+											src="images/projects/illuminants/wallpaper 1.png" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/illuminants/wallpaper 2.png" class="image2 fit"><img
+											src="images/projects/illuminants/wallpaper 2.png" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/illuminants/poster (1).png" class="image2 fit"><img
+											src="images/projects/illuminants/poster (1).png" alt="" loading="lazy" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/illuminants/poster (2).png" class="image2 fit"><img
+											src="images/projects/illuminants/poster (2).png" alt="" loading="lazy" /></a>
+								</article>
+
+
+							</div>
+						</section>
+
+					</div>
 					<div class="col-4 col-12-medium">
 
 						<!-- Sidebar -->
@@ -108,97 +197,9 @@
 								<h3>Artbook</h3>
 								<a href="https://drive.google.com/file/d/1VEG4dLUYwwNeVSmy2bRXunySITGayl9E/view?usp=sharing"
 									target="_blank" class="image fit"><img src="images/projects/illuminants/artbook.png"
-										alt="" /></a>
+										alt="" loading="lazy" /></a>
 							</section>
 							<hr />
-						</section>
-
-					</div>
-					<div class="col-8 col-12-medium medium">
-
-						<!-- Content -->
-						<section id="content">
-							<a href="#" class="image fit"><img src="images/projects/illuminants/banner.png"
-									alt="" /></a>
-							<h3>About The Project</h3>
-							<p>Illuminants was the first game I ever developed in Unity. My team and I worked on it for about 4 months alongside ATMU (another project of ours) and we got lots of praise from colleagues and professors just by the concept itself. We were prized the Best Videogame award by our University, competing against projects from all of our course's years.
-								<br><br>We displayed the game in multiple events in Portugal and it was really well embraced by the community.
-								<br><br>Currently, we are re-developing Illuminants from scratch and intend to release it to mobile, with no determined schedule. </p>
-							<h3>My Role In The Project</h3>
-							<ul class="roles">
-								<li>Programming
-									<p> I was Illuminants lead programmer.</p>
-								</li>
-
-								<li>Game Design
-									<p> I've worked on both game design and level design side-by-side with my
-										colleagues.</p>
-								</li>
-								<li>UI Design
-									<p> I was responsible for implementing the 3D interactive menus and creating the gameplay UI.</p>
-								</li>
-								<li>Promo Art
-									<p> I was also responsible for creating promo-art and official documents for the
-										game like the Artbook.
-									</p>
-								</li>
-							</ul>
-							<!-- Gallery  -->
-							<h3>Gallery</h3>
-							<div class="gallery2">
-
-								<article class="from-left">
-									<a href="images/projects/illuminants/ss (1).PNG" class="image2 fit"><img
-											src="images/projects/illuminants/ss (1).PNG" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/illuminants/ss (3).PNG" class="image2 fit"><img
-											src="images/projects/illuminants/ss (3).PNG" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/illuminants/ss (4).PNG" class="image2 fit"><img
-											src="images/projects/illuminants/ss (4).PNG" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/illuminants/ss (5).PNG" class="image2 fit"><img
-											src="images/projects/illuminants/ss (5).PNG" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/illuminants/ss (6).PNG" class="image2 fit"><img
-											src="images/projects/illuminants/ss (6).PNG" alt="" /></a>
-								</article>
-
-								<article class="from-left">
-									<a href="images/projects/illuminants/ss (2).PNG" class="image2 fit"><img
-											src="images/projects/illuminants/ss (2).PNG" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/illuminants/banner2.png" class="image2 fit"><img
-											src="images/projects/illuminants/banner2.png" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/illuminants/poster (3).png" class="image2 fit"><img
-											src="images/projects/illuminants/poster (3).png" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/illuminants/wallpaper 1.png" class="image2 fit"><img
-											src="images/projects/illuminants/wallpaper 1.png" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/illuminants/wallpaper 2.png" class="image2 fit"><img
-											src="images/projects/illuminants/wallpaper 2.png" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/illuminants/poster (1).png" class="image2 fit"><img
-											src="images/projects/illuminants/poster (1).png" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/illuminants/poster (2).png" class="image2 fit"><img
-											src="images/projects/illuminants/poster (2).png" alt="" /></a>
-								</article>
-
-
-							</div>
 						</section>
 
 					</div>
